--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@ img.onload = function() {
 
 // Trigger image load. The image was originally taken from
 // https://en.wikipedia.org/wiki/Carl_Friedrich_Gauss
-img.src = 'https://i.imgur.com/iyf2bRA.png';
+//img.src = 'https://i.imgur.com/iyf2bRA.png';
+img.src = 'http://3.bp.blogspot.com/-_YGHUqbBpn8/Vikla0orRgI/AAAAAAAAKQ4/9219IwZ0Y0g/s1600/IMG_732976.jpg';
 
 function start() {
   ctx = canvas.getContext('2d');
